--- a/notebooks/prueba.ipynb
+++ b/notebooks/prueba.ipynb
@@ -2,31 +2,49 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "29f3240f",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CWD: c:\\Users\\serrios\\01_prueba_analitico_4\\op_cobro\\notebooks\n",
+      "Existe notebooks/database? False\n",
+      "Existe ../database? ..\\database True\n",
+      "Existe DB? True\n"
+     ]
     }
-   },
-   "outputs": [],
+   ],
    "source": [
-    "import duckdb\n",
-    "con = duckdb.connect('database/analytics.duckdb')\n",
+    "import os\n",
+    "from pathlib import Path\n",
     "\n",
-    "# 1. ¿Se crearon las columnas compactas?\n",
-    "df_check = con.execute(\"SELECT * FROM silver.canales LIMIT 5\").df()\n",
-    "print(df_check.columns) \n",
-    "\n",
-    "# 2. ¿El índice de digitalización tiene sentido? (Debe ser entre 0 y 1)\n",
-    "stats = con.execute(\"SELECT MIN(index_digitalizacion_ult6), MAX(index_digitalizacion_ult6) FROM silver.canales\").fetchone()\n",
-    "print(f\"Rango Digitalización: {stats}\")"
+    "print(\"CWD:\", os.getcwd())\n",
+    "print(\"Existe notebooks/database?\", Path(\"database\").exists())\n",
+    "print(\"Existe ../database?\", Path(\"..\") / \"database\", (Path(\"..\") / \"database\").exists())\n",
+    "print(\"Existe DB?\", (Path(\"..\") / \"database\" / \"analytics.duckdb\").exists())"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": ".venv (3.11.0)",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
