Ajustes en los joins para construcción tabla GOLD.

--- a/notebooks/01_channel_explo.ipynb
+++ b/notebooks/01_channel_explo.ipynb
@@ -1897,6 +1897,28 @@
     "# Meta\n",
     "TARGET_N = 140  # dentro del rango 120-150"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "34221cc1",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'con' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mcon\u001b[49m.close()\n",
+      "\u001b[31mNameError\u001b[39m: name 'con' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "con.close()"
+   ]
   }
  ],
  "metadata": {
