--- a/notebooks/02_channel_select.ipynb
+++ b/notebooks/02_channel_select.ipynb
@@ -125,6 +125,16 @@
     "print(\"✅ Candidatas por reglas:\", len(candidates))\n",
     "candidates[:25]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "977d154b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "con.close()"
+   ]
   }
  ],
  "metadata": {
