--- a/notebooks/03_EDA_tablas_silver.ipynb
+++ b/notebooks/03_EDA_tablas_silver.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "49033b3b",
    "metadata": {},
    "outputs": [
@@ -6363,6 +6363,16 @@
     "<li> Tipos de llaves inconsistentes (num_doc BIGINT, obl17 DOUBLE) → estandarizar a VARCHAR para joins confiables por (num_doc,obl17,f_analisis). </li>\n",
     "<li> Alta sparsity (p50=0 en varias métricas): muchos casos sin pagos en ciertas ventanas/canales; mantener como señal y crear flags de ausencia. </li>\n",
     "<li> Outliers/skew en montos de pagos (p95/p99 altos): en GOLD se recomienda log1p y/o clipping + flags de pago alto.</li>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "1280bd07",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "con.close()"
    ]
   }
  ],
