--- a/notebooks/prueba.ipynb
+++ b/notebooks/prueba.ipynb
@@ -1142,6 +1142,474 @@
     "\n",
     "print(\"✅ Export listo:\", out_file)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "5f75efd6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "56989\n"
+     ]
+    }
+   ],
+   "source": [
+    "import duckdb\n",
+    "from pathlib import Path\n",
+    "\n",
+    "DB_PATH = Path(r\"C:\\Users\\serrios\\01_prueba_analitico_4\\op_cobro\\database\\analytics.duckdb\")\n",
+    "con = duckdb.connect(str(DB_PATH), read_only=True)\n",
+    "\n",
+    "print(con.execute(\"SELECT COUNT(*) FROM gold.dataset_modelo\").fetchone()[0])\n",
+    "con.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "06cabca3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>num_doc</th>\n",
+       "      <th>obl17</th>\n",
+       "      <th>f_analisis</th>\n",
+       "      <th>var_rta</th>\n",
+       "      <th>moras_avg_mora_3m</th>\n",
+       "      <th>moras_min_mora_3m</th>\n",
+       "      <th>moras_max_mora_3m</th>\n",
+       "      <th>moras_stddev_mora_3m</th>\n",
+       "      <th>moras_avg_mora_6m</th>\n",
+       "      <th>moras_min_mora_6m</th>\n",
+       "      <th>...</th>\n",
+       "      <th>max_porc_pago_6m</th>\n",
+       "      <th>stddev_porc_pago_6m</th>\n",
+       "      <th>avg_porc_pago_9m</th>\n",
+       "      <th>min_porc_pago_9m</th>\n",
+       "      <th>max_porc_pago_9m</th>\n",
+       "      <th>stddev_porc_pago_9m</th>\n",
+       "      <th>avg_porc_pago_12m</th>\n",
+       "      <th>min_porc_pago_12m</th>\n",
+       "      <th>max_porc_pago_12m</th>\n",
+       "      <th>stddev_porc_pago_12m</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>100028088711497</td>\n",
+       "      <td>17806128775334800</td>\n",
+       "      <td>2024-07-01</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>100028088711497</td>\n",
+       "      <td>19052883624618300</td>\n",
+       "      <td>2024-07-01</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>100028088711497</td>\n",
+       "      <td>26826204206697800</td>\n",
+       "      <td>2024-07-01</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>100028088711497</td>\n",
+       "      <td>31616528257602900</td>\n",
+       "      <td>2024-07-01</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>100028088711497</td>\n",
+       "      <td>38822113357418200</td>\n",
+       "      <td>2024-07-01</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>100028088711497</td>\n",
+       "      <td>4905660605071290</td>\n",
+       "      <td>2024-07-01</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>100028088711497</td>\n",
+       "      <td>533150066939815</td>\n",
+       "      <td>2024-07-01</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>100028088711497</td>\n",
+       "      <td>55864237141385400</td>\n",
+       "      <td>2024-07-01</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>100028088711497</td>\n",
+       "      <td>57485483593373000</td>\n",
+       "      <td>2024-07-01</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>100028088711497</td>\n",
+       "      <td>63771715762838600</td>\n",
+       "      <td>2024-07-01</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>10 rows × 252 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           num_doc              obl17 f_analisis  var_rta  moras_avg_mora_3m  \\\n",
+       "0  100028088711497  17806128775334800 2024-07-01        0                0.0   \n",
+       "1  100028088711497  19052883624618300 2024-07-01        0                0.0   \n",
+       "2  100028088711497  26826204206697800 2024-07-01        0                0.0   \n",
+       "3  100028088711497  31616528257602900 2024-07-01        0                0.0   \n",
+       "4  100028088711497  38822113357418200 2024-07-01        0                0.0   \n",
+       "5  100028088711497   4905660605071290 2024-07-01        0                0.0   \n",
+       "6  100028088711497    533150066939815 2024-07-01        0                0.0   \n",
+       "7  100028088711497  55864237141385400 2024-07-01        0                0.0   \n",
+       "8  100028088711497  57485483593373000 2024-07-01        0                0.0   \n",
+       "9  100028088711497  63771715762838600 2024-07-01        0                0.0   \n",
+       "\n",
+       "   moras_min_mora_3m  moras_max_mora_3m  moras_stddev_mora_3m  \\\n",
+       "0                  0                  0                   0.0   \n",
+       "1                  0                  0                   0.0   \n",
+       "2                  0                  0                   0.0   \n",
+       "3                  0                  0                   0.0   \n",
+       "4                  0                  0                   0.0   \n",
+       "5                  0                  0                   0.0   \n",
+       "6                  0                  0                   0.0   \n",
+       "7                  0                  0                   0.0   \n",
+       "8                  0                  0                   0.0   \n",
+       "9                  0                  0                   0.0   \n",
+       "\n",
+       "   moras_avg_mora_6m  moras_min_mora_6m  ...  max_porc_pago_6m  \\\n",
+       "0                0.0                  0  ...               0.0   \n",
+       "1                0.0                  0  ...               0.0   \n",
+       "2                0.0                  0  ...               0.0   \n",
+       "3                0.0                  0  ...               0.0   \n",
+       "4                0.0                  0  ...               0.0   \n",
+       "5                0.0                  0  ...               0.0   \n",
+       "6                0.0                  0  ...               0.0   \n",
+       "7                0.0                  0  ...               0.0   \n",
+       "8                0.0                  0  ...               0.0   \n",
+       "9                0.0                  0  ...               0.0   \n",
+       "\n",
+       "   stddev_porc_pago_6m  avg_porc_pago_9m  min_porc_pago_9m  max_porc_pago_9m  \\\n",
+       "0                  0.0               0.0               0.0               0.0   \n",
+       "1                  0.0               0.0               0.0               0.0   \n",
+       "2                  0.0               0.0               0.0               0.0   \n",
+       "3                  0.0               0.0               0.0               0.0   \n",
+       "4                  0.0               0.0               0.0               0.0   \n",
+       "5                  0.0               0.0               0.0               0.0   \n",
+       "6                  0.0               0.0               0.0               0.0   \n",
+       "7                  0.0               0.0               0.0               0.0   \n",
+       "8                  0.0               0.0               0.0               0.0   \n",
+       "9                  0.0               0.0               0.0               0.0   \n",
+       "\n",
+       "   stddev_porc_pago_9m  avg_porc_pago_12m  min_porc_pago_12m  \\\n",
+       "0                  0.0                0.0                0.0   \n",
+       "1                  0.0                0.0                0.0   \n",
+       "2                  0.0                0.0                0.0   \n",
+       "3                  0.0                0.0                0.0   \n",
+       "4                  0.0                0.0                0.0   \n",
+       "5                  0.0                0.0                0.0   \n",
+       "6                  0.0                0.0                0.0   \n",
+       "7                  0.0                0.0                0.0   \n",
+       "8                  0.0                0.0                0.0   \n",
+       "9                  0.0                0.0                0.0   \n",
+       "\n",
+       "   max_porc_pago_12m  stddev_porc_pago_12m  \n",
+       "0                0.0                   0.0  \n",
+       "1                0.0                   0.0  \n",
+       "2                0.0                   0.0  \n",
+       "3                0.0                   0.0  \n",
+       "4                0.0                   0.0  \n",
+       "5                0.0                   0.0  \n",
+       "6                0.0                   0.0  \n",
+       "7                0.0                   0.0  \n",
+       "8                0.0                   0.0  \n",
+       "9                0.0                   0.0  \n",
+       "\n",
+       "[10 rows x 252 columns]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "con = duckdb.connect(str(DB_PATH), read_only=True)\n",
+    "df = con.execute(\"SELECT * FROM gold.dataset_modelo LIMIT 10\").fetchdf()\n",
+    "con.close()\n",
+    "df\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "0325c84f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   null_num_doc  null_obl17  null_f_analisis\n",
+      "0           0.0         0.0              0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "con = duckdb.connect(str(DB_PATH), read_only=True)\n",
+    "print(con.execute(\"\"\"\n",
+    "SELECT\n",
+    "  SUM(CASE WHEN num_doc IS NULL THEN 1 ELSE 0 END) AS null_num_doc,\n",
+    "  SUM(CASE WHEN obl17  IS NULL THEN 1 ELSE 0 END) AS null_obl17,\n",
+    "  SUM(CASE WHEN f_analisis IS NULL THEN 1 ELSE 0 END) AS null_f_analisis\n",
+    "FROM gold.dataset_modelo\n",
+    "\"\"\").fetchdf())\n",
+    "con.close()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "7bf1258c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Exportado: C:\\Users\\serrios\\01_prueba_analitico_4\\op_cobro\\notebooks\\outputs\\gold_dataset_modelo.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "import duckdb\n",
+    "from pathlib import Path\n",
+    "\n",
+    "DB_PATH = Path(r\"C:\\Users\\serrios\\01_prueba_analitico_4\\op_cobro\\database\\analytics.duckdb\")\n",
+    "out_file = Path(r\"C:\\Users\\serrios\\01_prueba_analitico_4\\op_cobro\\notebooks\\outputs\\gold_dataset_modelo.csv\")\n",
+    "with duckdb.connect(str(DB_PATH), read_only=True) as con:\n",
+    "    con.execute(f\"\"\"\n",
+    "        COPY (SELECT * FROM gold.dataset_modelo)\n",
+    "        TO '{out_file.as_posix()}'\n",
+    "        (HEADER, DELIMITER ',');\n",
+    "    \"\"\")\n",
+    "\n",
+    "print(\"✅ Exportado:\", out_file)"
+   ]
   }
  ],
  "metadata": {
